--- a/Bakerstreet/ClientApp/package.json
+++ b/Bakerstreet/ClientApp/package.json
@@ -6,7 +6,12 @@
 		"@material-ui/core": "^3.6.1",
 		"@material-ui/icons": "^3.0.1",
 		"auth0-js": "^9.8.2",
+		"body-parser": "^1.18.3",
 		"bootstrap": "^3.3.7",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
+		"express-jwt": "^5.3.1",
+		"jwks-rsa": "^1.3.0",
 		"react": "^16.6.3",
 		"react-bootstrap": "^0.31.5",
 		"react-dom": "^16.0.0",
@@ -25,5 +30,5 @@
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject"
 	},
-	"proxy": "https://localhost:44329"
+	"proxy": "http://localhost:3001"
 }
